@@ -1,18 +1,24 @@
 package com.tss.aml.service;
 
 import com.tss.aml.dto.result.ComplianceOfficerResponseDto;
+import com.tss.aml.dto.result.PaginatedResponseDto;
 import com.tss.aml.dto.result.RuleTemplateResponseDto;
 import com.tss.aml.dto.result.TenantResponseDto;
 import com.tss.aml.enums.RuleType;
+import com.tss.aml.master.entity.Tenant;
 import com.tss.aml.master.repository.TenantRepository;
 import com.tss.aml.rule_engine.RuleTemplateFactory;
 import com.tss.aml.rule_engine.rule_template.IRuleTemplate;
+import com.tss.aml.tenant.entity.ComplianceOfficer;
 import com.tss.aml.tenant.repository.ComplianceOfficerRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -22,17 +28,26 @@ public class DataService {
     private final RuleTemplateFactory ruleTemplateFactory;
     private final ComplianceOfficerRepository complianceOfficerRepository;
 
-    public List<TenantResponseDto> getTenants() {
-        return tenantRepository
-                .findAll()
-                .stream()
+    public PaginatedResponseDto<TenantResponseDto> getTenants(Pageable pageable) {
+        Page<Tenant> tenantPage = tenantRepository.findAll(pageable);
+        
+        List<TenantResponseDto> dtos = tenantPage.getContent().stream()
                 .map(t -> {
                     TenantResponseDto dto = new TenantResponseDto();
                     dto.setTenantName(t.getTenantName());
                     dto.setTenantStatus(t.getTenantStatus());
                     return dto;
                 })
-                .toList();
+                .collect(Collectors.toList());
+
+        return PaginatedResponseDto.<TenantResponseDto>builder()
+                .content(dtos)
+                .pageNumber(tenantPage.getNumber())
+                .pageSize(tenantPage.getSize())
+                .totalElements(tenantPage.getTotalElements())
+                .totalPages(tenantPage.getTotalPages())
+                .last(tenantPage.isLast())
+                .build();
     }
 
     public List<RuleTemplateResponseDto> getRuleTemplates() {
@@ -59,10 +74,10 @@ public class DataService {
                 .toList();
     }
 
-    public List<ComplianceOfficerResponseDto> getComplianceOfficers() {
-        return complianceOfficerRepository
-                .findAll()
-                .stream()
+    public PaginatedResponseDto<ComplianceOfficerResponseDto> getComplianceOfficers(Pageable pageable) {
+        Page<ComplianceOfficer> complianceOfficerPage = complianceOfficerRepository.findAll(pageable);
+        
+        List<ComplianceOfficerResponseDto> dtos = complianceOfficerPage.getContent().stream()
                 .map(co -> {
                     ComplianceOfficerResponseDto dto = new ComplianceOfficerResponseDto();
                     dto.setEmail(co.getEmail());
@@ -71,6 +86,15 @@ public class DataService {
 
                     return dto;
                 })
-                .toList();
+                .collect(Collectors.toList());
+
+        return PaginatedResponseDto.<ComplianceOfficerResponseDto>builder()
+                .content(dtos)
+                .pageNumber(complianceOfficerPage.getNumber())
+                .pageSize(complianceOfficerPage.getSize())
+                .totalElements(complianceOfficerPage.getTotalElements())
+                .totalPages(complianceOfficerPage.getTotalPages())
+                .last(complianceOfficerPage.isLast())
+                .build();
     }
 }
